--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Momtaz1992/React-Ron-Swanson.git",
+  "homepage": "https://Momtaz1992.github.io/React-Ron-Swanson.git",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
